--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
                         <ul class="nav navbar-nav sm" id="main-menu">
-                            <li class="active main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/></i>Home</a></li>
+                            <li class="active main-items"><a href="index.html"><img src="images/caret.png" alt="" class="nav-caret"/></i>Home</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>About Us</a></li>
-                            <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Products</a></li>
+                            <li class=" main-items"><a href="products.html"><img src="images/caret.png" alt="" class="nav-caret"/>Products</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>News</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Contact Us</a></li>
                         </ul>
