--- a/products.html
+++ b/products.html
@@ -41,9 +41,9 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-navbar-collapse-1">
                         <ul class="nav navbar-nav sm" id="main-menu">
-                            <li class="active main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/></i>Home</a></li>
+                            <li class=" main-items"><a href="index.html"><img src="images/caret.png" alt="" class="nav-caret"/></i>Home</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>About Us</a></li>
-                            <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Products</a></li>
+                            <li class="active main-items"><a href="products.html"><img src="images/caret.png" alt="" class="nav-caret"/>Products</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>News</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Contact Us</a></li>
                         </ul>
@@ -59,7 +59,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <div class="well" style="min-height: 285px;">
+                <div class="well well-products" style="min-height: 285px;">
                     <div class="row">
                         <div class="col-md-12"><h2 class="title">Oil Products</h2></div>
                         <div class="col-sm-5" style="padding-right: 0">
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="well">
+                <div class="well well-products-sidebar">
                     <h2 class="title">News</h2>
                     <ul class="list-unstyled recent">
                         <li><a href="#">January 6, 2015</a><p>Fuel Oil will increase next year</p></li>
