--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="base_url" content="http://metagra-dmcc.ae">
     <title>Ox Oil Trading DMCC  </title>
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,700,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" href="style.css"/>
@@ -83,7 +84,7 @@
         <div class="row">
 
             <div class="col-md-8">
-                <div class="well" style="min-height: 285px;">
+                <div class="well well-main" style="min-height: 285px;">
                     <h2 class="title">Oil Products</h2>
                     <div class="row">
                         <div class="col-md-4" style="padding-right: 0;">
