--- a/products.html
+++ b/products.html
@@ -6,9 +6,11 @@
     <meta name="base_url" content="http://metagra-dmcc.ae">
     <title>Ox Oil Trading DMCC</title>
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,700,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" href="style.css"/>
+
 
     <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css"/>
     <link rel="stylesheet" href="js/owl-carousel/owl.theme.css"/>
@@ -59,16 +61,16 @@
         <div class="row">
 
             <div class="col-md-8">
-                <div class="well well-products" style="min-height: 285px;">
+                <div class="well well-products well-main" style="min-height: 285px;">
                     <div class="row">
-                        <div class="col-md-12"><h2 class="title">Oil Products</h2></div>
+                        <div class="col-md-12"><h2 class="title">Oil Products <i class="fa fa-angle-double-right"></i> </h2></div>
                         <div class="col-sm-5" style="padding-right: 0">
                             <a href="#">
                                 <img class="media-object img-responsive" src="http://lorempixel.com/250/180/">
                             </a>
                         </div>
                         <div class="col-sm-7" style="padding-left: 0">
-                            <h2 class="title">Oil Products</h2>
+                            <h2 class="title">Gasoline</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                             <div style="margin-top:30px">
                                 <img src="images/certificate-icon.png" alt="" class="certificate"/>
