--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="base_url" content="http://metagra-dmcc.ae">
     <title>Ox Oil Trading DMCC  </title>
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,700,400' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,700,600,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" href="style.css"/>
@@ -23,7 +23,7 @@
                     <img class="img-responsive logo-img" src="images/logo.png" alt="Ox Oil Trading DMCC">
                 </a>
             </div>
-            <div class="col-lg-5 col-md-offset-3">
+            <div class="col-lg-6 col-md-offset-2">
                 <nav class="text-center">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
@@ -40,6 +40,7 @@
                             <li class="active main-items"><a href="index.html"><img src="images/caret.png" alt="" class="nav-caret"/></i>Home</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>About Us</a></li>
                             <li class=" main-items"><a href="products.html"><img src="images/caret.png" alt="" class="nav-caret"/>Products</a></li>
+                            <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Operations</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>News</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Contact Us</a></li>
                         </ul>
@@ -84,26 +85,26 @@
         <div class="row">
 
             <div class="col-md-8">
-                <div class="well well-main" style="min-height: 285px;">
+                <div class="well well-main" style="min-height: 306px;">
                     <h2 class="title">Oil Products</h2>
                     <div class="row">
-                        <div class="col-md-4" style="padding-right: 0;">
+                        <div class="col-md-4 post-nav-container">
                             <ul class="list-unstyled post-nav">
-                                <li><a href="#">Strong Cocktail</a></li>
-                                <li><a href="#">Experience Collaborator</a></li>
-                                <li><a href="#">Culture for Success</a></li>
+                                <li><a href="#">Base Oil</a></li>
+                                <li class="active"><a href="#">Fuel with Sulfur</a></li>
+                                <li><a href="#">Gasoline</a></li>
                             </ul>
                         </div>
-                        <div class="col-md-8">
-                            <div class="media">
-                                <div class="media-left">
+                        <div class="col-md-8" style="padding-left: 0; padding-right: 0">
+                            <div class="row">
+                                <div class="col-md-4" style="padding-right: 0">
                                     <a href="#">
-                                        <img class="media-object" src="http://lorempixel.com/150/100/" alt="..." class="img-responsive">
+                                        <img class="media-object img-responsive" src="http://www.severnfuels.co.uk/images/gallery/road_forecourt_key_fuels.jpg">
                                     </a>
                                 </div>
-                                <div class="media-body">
+                                <div class="col-md-8">
                                     <!--<h4 class="media-heading">Media heading</h4>-->
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                                 </div>
                             </div>
                         </div>
@@ -136,7 +137,6 @@
                 <div class="col-lg-4 col-sm-6">
                     <small>Copyright OX OIL TRADING © 2014. All Rights Reserved</small>
                     <p><i class="fa fa-phone-square"></i> Call us <span class="emp"><b>+123 4567 8901</b></span>
-                        <br/> <small>Our phone lines are available 24/7</small>
                     </p>
                 </div>
                 <div class="col-lg-4 col-sm-6">
