--- a/products.html
+++ b/products.html
@@ -6,11 +6,10 @@
     <meta name="base_url" content="http://metagra-dmcc.ae">
     <title>Ox Oil Trading DMCC</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,700,400' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,700italic,700,600,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="font-awesome/css/font-awesome.css"/>
     <link rel="stylesheet" href="style.css"/>
-
 
     <link rel="stylesheet" href="js/owl-carousel/owl.carousel.css"/>
     <link rel="stylesheet" href="js/owl-carousel/owl.theme.css"/>
@@ -29,7 +28,7 @@
                     <img class="img-responsive logo-img" src="images/logo.png" alt="Ox Oil Trading DMCC">
                 </a>
             </div>
-            <div class="col-lg-5 col-md-offset-3">
+            <div class="col-lg-6 col-md-offset-2">
                 <nav class="text-center">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-navbar-collapse-1">
@@ -46,6 +45,7 @@
                             <li class=" main-items"><a href="index.html"><img src="images/caret.png" alt="" class="nav-caret"/></i>Home</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>About Us</a></li>
                             <li class="active main-items"><a href="products.html"><img src="images/caret.png" alt="" class="nav-caret"/>Products</a></li>
+                            <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Operations</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>News</a></li>
                             <li class=" main-items"><a href="#"><img src="images/caret.png" alt="" class="nav-caret"/>Contact Us</a></li>
                         </ul>
@@ -124,7 +124,6 @@
                 <div class="col-lg-4 col-sm-6">
                     <small>Copyright OX OIL TRADING © 2014. All Rights Reserved</small>
                     <p><i class="fa fa-phone-square"></i> Call us <span class="emp"><b>+123 4567 8901</b></span>
-                        <br/> <small>Our phone lines are available 24/7</small>
                     </p>
                 </div>
                 <div class="col-lg-4 col-sm-6">
